[gd_scene format=3 uid="uid://bp4nu8jqt2d6h"]

[ext_resource type="StyleBox" uid="uid://cxps47qtey8f7" path="res://themes/default_slot.tres" id="1_th82r"]
[ext_resource type="Script" uid="uid://wvl17ja8kfnw" path="res://Code/slot.gd" id="2_nsp58"]
[ext_resource type="Texture2D" uid="uid://b0jpo2epsdxav" path="res://Sprites/Basic Charakter Spritesheet.png" id="2_typyk"]
[ext_resource type="Texture2D" uid="uid://2f7hrq1isdph" path="res://Sprites/ninja_skin.png" id="3_nsp58"]
[ext_resource type="Texture2D" uid="uid://c3bhfxhq1s1yl" path="res://Sprites/pumpkin_skin.png" id="4_57lr3"]
[ext_resource type="Texture2D" uid="uid://codvwl28bvygq" path="res://Sprites/white_skin.png" id="5_8bc2s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7k868"]
atlas = ExtResource("2_typyk")
region = Rect2(112, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpc6h"]
atlas = ExtResource("3_nsp58")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kltya"]
atlas = ExtResource("4_57lr3")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vcvc"]
atlas = ExtResource("5_8bc2s")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7k868"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7k868")
}],
"loop": false,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpc6h")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kltya")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vcvc")
}],
"loop": false,
"name": &"3",
"speed": 5.0
}]

[node name="Slot" type="Panel" unique_id=929990328]
custom_minimum_size = Vector2(0, 100)
focus_mode = 1
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/panel = ExtResource("1_th82r")
script = ExtResource("2_nsp58")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1499317860]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer" unique_id=922548726]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer" unique_id=1226481116]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 1

[node name="Sprite" type="AnimatedSprite2D" parent="MarginContainer/HBoxContainer/Control" unique_id=1211912790]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_7k868")
animation = &"0"
centered = false

[node name="LabelCost" type="Label" parent="MarginContainer/HBoxContainer" unique_id=1546781650]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 40

[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
